--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "jquery-ui";
+@import "datatables";
 
 .total-box{
   margin: 0 auto;
@@ -10,3 +11,4 @@
   background: none;
   font-weight: bold;
 }
+
