--- a/app/views/payments/payment_form.html.erb
+++ b/app/views/payments/payment_form.html.erb
@@ -3,14 +3,15 @@
 	<div class="field">
     <%= f.hidden_field :contractor_id, value: @contractor.id %>
   </div>
-  <table class="table table-striped">
+  <table class="table table
+  -striped">
 	  <thead>
 	    <tr>
 	      <!-- <th scope="col">#/th> -->
 	      <th scope="col">Invoice Number</th>
 	      <th scope="col">Amount</th>
 	      <th scope="col">Paid</th>
-	      <th colspan="3"></th>
+	      <!-- <th colspan="3"></th> -->
 	    </tr>
 	  </thead>
 	  <div class="field">
@@ -30,6 +31,18 @@
 
 	  </div>
 	</table>
+
+
+
+
+<%#= hidden_field_tag "contractor_id[contractorinvoice_ids][]", value: @contractor.id %>
+<%# Contractorinvoice.all.each do |contractorinvoice| %>
+  <%#= check_box_tag "contractor_id[contractorinvoice_ids][]", contractorinvoice.id, @contractor.contractorinvoice_ids.include?(contractorinvoice.id), id: dom_id(contractorinvoice) %>
+  <%#= label_tag dom_id(contractorinvoice), contractorinvoice.paid %><br>
+<%# end %>
+
+
+
 
 	<table class="table table-striped">
 		<tr>
