--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,6 +1,55 @@
-<% @contractor.each do |contractor| %>
-	Name <b><%= contractor.name %></b><br>
-	No of Unpaid Invoices 
-	<%= contractor.contractorinvoices.unpaid.count %> <br>
-	<%= link_to 'Make Payment', payment_form_path(contractor.id) %><br>
-<% end %>
+<div class="row">
+	<div class="col-lg-6">
+		<h2>Unpaid Invoices</h2>
+		<table class="table table-striped">
+		  <thead>
+		    <tr>
+		      <th scope="col">Contractor</th>
+		      <th scope="col">Unpaid Invoices</th>
+		      <th colspan="3"></th>
+		    </tr>
+		  </thead>
+
+		  <tbody>
+				<% @contractor.each do |contractor| %>
+					<tr>
+						<td><%= contractor.name %></td>
+						<td><%= contractor.contractorinvoices.unpaid.count %></td>
+						<td><%= link_to 'Make Payment', payment_form_path(contractor.id) %></td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
+	<div class="col-lg-6">
+		<h2>Payments Made</h2>
+		<table class="table table-striped">
+		  <thead>
+		    <tr>
+		      <th scope="col">#</th>
+		      <th scope="col">Contractor</th>
+		      <th scope="col">Amount</th>
+		      <th scope="col">Date</th>
+		      <th colspan="3"></th>
+		    </tr>
+		  </thead>
+
+		  <tbody>
+		    <% @payments.each do |payment| %>
+		      <tr>
+		        <td scope="row"><%= payment.id %></td>
+		        <td><%= link_to payment.contractor.name, payment %></td>
+		        <td><%= payment.amount %></td>
+		        <td><%#= link_to contractor.status.state, status_path(contractor.status) %></td>
+		        <td><%= link_to 'Edit', edit_payment_path(payment) %></td>
+		        <td><%#= link_to 'Destroy', payment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		      </tr>
+		    <% end %>
+		  </tbody>
+		</table>
+
+		<br>
+	</div>
+</div>
+
+
