changes to payment voucher

--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -5,7 +5,7 @@ Paid Invoices <%= @payment.contractorinvoice_id %>
 <!-- Paid invoices <%#= @payment.contractorinvoice_id.scan(/\d/).map(&:to_i) %> -->
 <br>
 
-<%= @payment.contractorinvoices %>
+<%#= @payment.contractorinvoices %>
 <br>
 <%#= @payment.contractorinvoices.each do |invoice| %>
 	<%#= invoice.number %>
