--- a/app/views/payments/payment_form.html.erb
+++ b/app/views/payments/payment_form.html.erb
@@ -2,11 +2,12 @@
 	
   <%= f.hidden_field :contractor_id, value: @contractor.id %>
   
-  <table class="table table
-  -striped">
+  <table class="table table-striped">
 	  <thead>
 	    <tr>
-	      <th scope="col">Invoice Number</th>
+	      <!-- <th scope="col">Invoice Number</th> -->
+	    	<th scope="col">Required For</th>
+	    	<th>Qty</th>
 	      <th scope="col">Amount</th>
 	      <th scope="col">Paid</th>
 	    </tr>
@@ -17,9 +18,11 @@
 	  	<% total=[] %>
 	  	<% @contractor.contractorinvoices.unpaid.each do |invoice| %>
 	  		<tr>
-	        <td><%= link_to invoice.number, invoice %></td>
+	        <td><%= invoice.description %> <br>
+	        	This Invoice <b>INVOICE NO_<%= link_to invoice.number, invoice %> - <%= invoice.stage.percentage.round(0) %>% </b></td>
+	  			<td><%= invoice.stage.percentage %> %</td>
 	        <td><%= number_with_delimiter((invoice.contractorpo.amount / invoice.stage.percentage).round(2), :delimiter => ',') %></td>
-	        <td><%= check_box_tag "payment[invoice_id][]", invoice.id %> Paid</td>
+	        <td><%= check_box_tag "payment[invoice_id][]", invoice.id %> Pay</td>
 
 	        <% total << (invoice.contractorpo.amount / invoice.stage.percentage) %>
 	      </tr>
@@ -31,9 +34,43 @@
 
 	<table class="table table-striped">
 		<tr>
-			<td>Total Invoice Amount</td>
-			<td><%#= total.sum.round(2) %></td>
-			<td><%= f.text_field :amount, value: number_with_delimiter(total.sum.round(2), :delimiter => ",", :separator => "."), disabled: true, class: "total-box" %></td>
+			<td>Subtotal</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td><b><%= f.text_field :amount, value: number_with_delimiter(total.sum.round(2), :delimiter => ",", :separator => "."), disabled: true, class: "total-box" %></b></td>
+		</tr>
+		<tr>
+			<td>WHT (05/03%)</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td>Mark</td>
+		</tr>
+		<tr>
+			<td>VAT (16%)</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td>Mark</td>
+		</tr>
+		<tr>
+			<td>WHT VAT (06%)</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td>Mark</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td>TOTAL (KES)</td>
+			<td>Mark</td>
 		</tr>
 	</table>
 	
