--- a/app/views/payments/payment_form.html.erb
+++ b/app/views/payments/payment_form.html.erb
@@ -29,21 +29,18 @@
 	  	<% end %>
 
 	  </div>
-	</table>
+	<!-- </table>
 
 
-	<table class="table table-striped">
+	<table class="table table-striped"> -->
 		<tr>
 			<td>Subtotal</td>
-			<td></td>
-			<td></td>
-			<td></td>
 			<td><b><%= f.text_field :amount, value: number_with_delimiter(total.sum.round(2), :delimiter => ",", :separator => "."), disabled: true, class: "total-box" %></b></td>
+			<td></td>
+			<td></td>
 		</tr>
 		<tr>
 			<td>WHT (05/03%)</td>
-			<td></td>
-			<td></td>
 			<td></td>
 			<td></td>
 			<td>Mark</td>
@@ -52,21 +49,15 @@
 			<td>VAT (16%)</td>
 			<td></td>
 			<td></td>
-			<td></td>
-			<td></td>
 			<td>Mark</td>
 		</tr>
 		<tr>
 			<td>WHT VAT (06%)</td>
 			<td></td>
 			<td></td>
-			<td></td>
-			<td></td>
 			<td>Mark</td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
 			<td></td>
 			<td></td>
 			<td>TOTAL (KES)</td>
