--- a/app/views/contractors/show.html.erb
+++ b/app/views/contractors/show.html.erb
@@ -36,34 +36,80 @@
 		<%# end %>
 	</tbody>
 </table> -->
-
-<h1>Contracts</h1>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Site</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Date</th>
-      <th scope="col">Contractorpos</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @contractor.contracts.each do |contract| %>
+<div class="col-lg-4">
+  <h2>Awarded Contracts</h2>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td scope="row"><%= contract.id %></td>
-        <td><%= link_to contract.site.name, site_url(contract.site) %></td>
-        <td><%= contract.amount %></td>
-        <td><%= contract.date.strftime("%d %b, %Y") %></td>
-        <td><%= link_to contract.contractorpo.number, contractorpo_url(contract.contractorpo) %></td>
-        <td><%= link_to 'Show', contract %></td>
+        <th scope="col">#</th>
+        <th scope="col">Site</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Date</th>
+        <th scope="col">PO</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @contractor.contracts.each do |contract| %>
+        <tr>
+          <td scope="row"><%= contract.id %></td>
+          <td><%= link_to contract.site.name, site_url(contract.site) %></td>
+          <td><%= contract.amount %></td>
+          <td><%= contract.date.strftime("%d %b, %Y") %></td>
+          <td><%= link_to contract.contractorpo.number, contractorpo_url(contract.contractorpo) %></td>
+          <td><%= link_to 'Show', contract %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<div class="col-lg-4">
+  <h2>Unpaid Invoices</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Invoice #</th>
+        <th scope="col">Percent</th>
+        <th scope="col">Amount</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @contractor.contractorinvoices.unpaid.each do |invoice| %>
+        <tr>
+          <td><%= link_to invoice.number, invoice %> </td>
+          <td><%= invoice.stage.percentage %> %</td>
+          <td><%= number_with_delimiter((invoice.contractorpo.amount / invoice.stage.percentage).round(2), :delimiter => ',') %></td>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<div class="col-lg-4">
+  <h2>Paid Invoices</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Invoice #</th>
+        <th scope="col">Percent</th>
+        <th scope="col">Amount</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @contractor.contractorinvoices.paid.each do |invoice| %>
+        <tr>
+          <td><%= link_to invoice.number, invoice %> </td>
+          <td><%= invoice.stage.percentage %> %</td>
+          <td><%= number_with_delimiter((invoice.contractorpo.amount / invoice.stage.percentage).round(2), :delimiter => ',') %></td>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <%= link_to 'Edit', edit_contractor_path(@contractor) %> |
 <%= link_to 'Back', :back %>
