--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -43,12 +43,13 @@ Paid Invoices <%= @payment.contractorinvoice_id %>
 <%#= link_to 'Edit', edit_payment_path(@payment) %> |
 <%= link_to 'Back', :back %>
 
-<% @payment.contractor.contractorinvoices.paid.each do |invoice| %>
-      <tr>
-        <td><%= invoice.description %> <br>
-          This Invoice <b>INVOICE NO_<%= link_to invoice.number, invoice %> - <%= invoice.stage.percentage.round(0) %>% FA Payment</b></td>
-        <td><%= invoice.stage.percentage %> %</td>
-        <td><%= number_with_delimiter((invoice.contractorpo.amount / invoice.stage.percentage).round(2), :delimiter => ',') %></td>
-
-      </tr>
-      <% end %>
+<% YAML.load(@payment.contractorinvoice_id.delete':').each do |id| %>
+  <tr>
+    <% ci = Contractorinvoice.find(id) %>
+    <td><%= ci.description %><br/>
+      This Invoice <b>INVOICE NO_<%= link_to ci.number, ci %> - <%= ci.stage.percentage.round(0) %>% FA Payment</b></td>
+    </td>
+    <td><%= ci.stage.percentage %> %</td>
+    <td><%= number_with_delimiter((ci.contractorpo.amount / ci.stage.percentage).round(2), :delimiter => ',') %></td>
+  </tr>
+<% end %>
