fixed milestones edit

--- a/app/views/milestones/_stage_fields.html.erb
+++ b/app/views/milestones/_stage_fields.html.erb
@@ -1,8 +1,8 @@
 <div class="nested-fields">
   <div class="field">
-    <%= f.label :percentage %>
+    <%= form.label :percentage %>
     <br/>
-    <%= f.number_field :percentage %>
+    <%= form.number_field :percentage %>
   </div>
-  <%= link_to_remove_association "remove stage", f %>
+  <%= link_to_remove_association "remove stage", form %>
 </div>
