--- a/app/views/contractorinvoices/show.html.erb
+++ b/app/views/contractorinvoices/show.html.erb
@@ -22,8 +22,8 @@
         </div>
         <div class="col-lg-4">
           <p>
-            <strong>Pin No:</strong><br>
-            <%= @contractorinvoice.pin %>
+            <strong>Contractor Pin No:</strong><br>
+            <%= @contractorinvoice.contractor.pin %>
           </p>
         </div>
       </div>
