--- a/app/views/contractors/show.html.erb
+++ b/app/views/contractors/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Contractor PIN:</strong>
+  <%= @contractor.pin %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @contractor.description %>
 </p>
