--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -18,7 +18,7 @@
   <%= link_to 'Contracts', contracts_path %> |
   <%= link_to 'Contractor Invoices', contractorinvoices_path %> |
   <%= link_to 'Pay Vouchers', payments_path %>
-    logged in as: <%= link_to current_user.email, edit_user_registration_path %>
+    logged in as: <%= link_to current_user.username, edit_user_registration_path %>
     <%= link_to "Log out", destroy_user_session_path, :method => 'delete' %>
 <% end %> 
 </nav>
